projekt/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
  labels:
    app: api

spec:
  template:
    metadata:
      name: api
      labels:
        app: api
    spec: 
      containers:
        - name: backend-api
          image: api:v0.4.8
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
  replicas: 1
  selector:
    matchLabels:
      app: api
