projekt/Service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service

spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: app
