projekt/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: react-app-service
      port:
        number: 80
  rules:
    - host: myapp.me
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: react-app-service
              port:
                number: 80
